--- a/styling.css
+++ b/styling.css
@@ -17,116 +17,14 @@ body {
 
 .icon {
     gap: 10px;
-    display: flex;
 }
 
-header {
-    display: flex;
-    justify-content: center;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    height: 100%;
-    flex-direction: row;
-    margin-left: auto;
-    align-items: center;
-}
-
-nav {
-    width: 100%;
-    height: 80px;
-    background-color: rgba(174, 24, 24, 0.927);
-    align-items: center;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.links-container {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-
-nav li a {
-    height: 100%;
-    margin: 20px 0px;
-    padding: 0 20px;
-    display: flex;
-    text-align: right;
-    align-items: center;
+.bagify a {
     text-decoration: none;
     color: white;
-    transition: ease all 0.3s;
-}
-
-ul li ul.dropdown-menu {
-    display: flex;
-    background-color: rgba(174, 24, 24, 0.927);
-    height: 420px;
-    width: max-content;
-    padding: 0 20px;
-}
-
-
-ul li ul.dropdown-menu li {
-    width: 100%;
-}
-
-ul li ul.dropdown-menu a {
-    font-size: 16px;
-    width: 100%;
-    height: 50%;
-    color: white;
-}
-
-ul li ul.dropdown-menu a:hover {
-    color: black;
-}
-
-
-ul li ul.dropdown-menu {
-    position: fixed;
-    z-index: 999;
-    display: none;
-}
-
-ul li:hover ul.dropdown-menu {
-    display: flex;
-    flex-direction: column;
-}
-
-nav li a:hover {
-    color: black;
-}
-
-nav a:active {
-    background-color: rgb(176, 175, 177);
-}
-
-nav h1 a {
-    color: white;
-    display: flex;
-    margin-right: auto;
-    align-items: center;
-    font-size: 40px;
-    font-style: italic;
-    font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-    text-decoration: none;
-    letter-spacing: 3px;
 }
 
-.navbar-collapse{
-    background-color: rgba(174, 24, 24, 0.927);
-    z-index: 999;
-}
 
 .section1 {
     width: 100%;
@@ -227,6 +125,18 @@ nav h1 a {
     justify-content: center;
 }
 
+@media (max-width:1260px){
+    .arrival-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 1260px;
+    }
+}
+
+
+
 .section2 h1 {
     font-size: 100px;
     color: white;
@@ -318,6 +228,16 @@ nav h1 a {
     justify-content: center;
     grid-template-columns: 400px 400px 400px;
     gap: 50px;
+}
+
+@media (max-width:1260px) {
+    .collection-container {
+        display: grid;
+        justify-content: center;
+        grid-template-rows: 400px 400px 400px ;
+        grid-template-columns: 400px;
+        gap: 50px;
+    }
 }
 
 .card {
